--- a/test.html
+++ b/test.html
@@ -37,6 +37,14 @@
             align-items: center;
             position: relative;
         }
+        .white-link {
+            color: white; /* Ustawia kolor tekstu na biały */
+            text-decoration: none; /* Usuwa podkreślenie */
+        }
+        .white-link:hover {
+            color: #007bff;
+            text-decoration: underline;
+        }
         .section::before {
             content: '';
             position: absolute;
@@ -45,6 +53,10 @@
             height: 100%;
             background-size: cover;
             background-position: center;
+        }
+        .first-section::before, .last-section::before {
+            background-size: 50%;
+            background-repeat: no-repeat;
         }
         .home::before {
             background-image: url('fig0.png');
@@ -70,30 +82,43 @@
         .content {
             width: 66.67%;
             padding-left: 33.33%;
-            padding-top: 0;
             text-align: justify;
             display: flex;
             flex-direction: column;
             justify-content: center;
-            align-items: flex-start; /* Align content to the start */
+            align-items: flex-start;
+        }
+        .home .content, .contact .content {
+            align-items: center;
+            text-align: center;
+        }
+        h1, h2 {
+            margin-top: -300px;
+            margin-left: 120px;
+            color: white;
+            font-size: 4em;
+        }
+        .home h1, .contact h2 {
+            margin-left: -500px;
+        }
+        p, .articles-list li {
+            margin-top: 30px;
+            margin-left: 100px;
+            margin-right: 100px;
+        }
+        .home p, .contact p {
+            margin-left: -500px;
+            margin-right: 0;
+            margin-top: 30px;
         }
         .home, .research, .projects, .teaching, .tutorials, .articles, .contact {
             color: white;
             background-color: #1B3A5B;
         }
-        h1, h2 {
-            margin: 0;
-            margin-top: 0;
-            padding: 20px 0;
-            color: white;
-            text-align: left;
-            font-size: 4em; /* Making the title three times larger */
-            margin-left: 20px;
-        }
         .research .content {
             display: grid;
             grid-template-columns: 1fr 1fr;
-            column-gap: 40px;
+            column-gap: 20px;
         }
         .articles-list {
             list-style-type: none;
@@ -102,6 +127,13 @@
         }
         .articles-list li {
             margin-bottom: 10px;
+            margin-left: 100px;
+            margin-right: 100px;
+        }
+        .teaching-list {
+            list-style-type: none;
+            padding: 0;
+            margin-left: 20px;
         }
         p {
             line-height: 1.6;
@@ -131,7 +163,7 @@
     <a href="#articles">Articles</a>
     <a href="#contact">Contact</a>
 </div>
-<div class="section home" id="home">
+<div class="section home first-section" id="home">
     <div class="content">
         <h1>Welcome to my personal page</h1>
         <p>This is the home page of my scientific and development portfolio. Explore my work and insights in science and technology.</p>
@@ -152,7 +184,14 @@
 <div class="section teaching" id="teaching">
     <div class="content">
         <h2>Teaching</h2>
-        <p>Explore my teaching portfolio, including courses, workshops, and educational resources I've developed.</p>
+        <p> Explore my teaching portfolio, including courses, workshops, and educational resources I've developed. </p>
+        <ul class="articles-list">
+            <li> 1. Physics laboratory for physics students (2021, 2022) </li>
+            <li> 2. Physics laboratory for chemistry students </li>
+            <li> 3. Physics laboratory for biotechnology students</li>
+            <li> 4. Web Development for computer science students (HTML/CSS, JS, Node.js)</li>
+            <li> 5. C/C++ programming for computer science students</li>
+        </ul>
     </div>
 </div>
 <div class="section tutorials" id="tutorials">
@@ -165,14 +204,14 @@
     <div class="content">
         <h2>Articles</h2>
         <ul class="articles-list">
-            <li>Article 1</li>
-            <li>Article 2</li>
-            <li>Article 3</li>
-            <li>Article 4</li>
+            <li><a href="https://iopscience.iop.org/article/10.1088/1361-6455/ac8298/meta" class="white-link">1. M. Hendzel, M. Fidrysiak, J. Spałek, Many-particle covalency...</a></li>
+            <li><a href="https://pubs.acs.org/doi/full/10.1021/acs.jpclett.2c02544" class="white-link">2. M. Hendzel, M. Fidrysiak, J. Spałek, Toward Complementary Characterization...</a></li>
+            <li><a href="http://przyrbwn.icm.edu.pl/APP/PDF/143/app143z2p12.pdf" class="white-link">3. M. Hendzel, J. Spałek, Degree of atomicity in chemical bonding...</a></li>
+            <li><a href="https://books.google.pl/books?id=2WvDEAAAQBAJ" class="white-link">4. E. Brocławik, M. Fidrysiak, M. Hendzel, J. Spałek, Interparticle correlations...</a></li>
         </ul>
     </div>
 </div>
-<div class="section contact" id="contact">
+<div class="section contact last-section" id="contact">
     <div class="content">
         <h2>Contact</h2>
         <p>Get in touch for collaborations, discussions, or any inquiries. Let's connect and explore the possibilities.</p>
@@ -186,9 +225,11 @@
             <a href="mailto:maciej.hendzel@doctoral.uj.edu.pl" title="Email">
                 <i class="fas fa-envelope"></i>
             </a>
+            <a href="https://scholar.google.com/citations?user=veLhHmsAAAAJ&hl=en&oi=ao" target="_blank" title="Google Scholar">
+                <i class="fas fa-graduation-cap"></i>
+            </a>
         </div>
     </div>
 </div>
 </body>
 </html>
-
